fixed overflow issue part 1

--- a/warframeMod.css
+++ b/warframeMod.css
@@ -319,6 +319,7 @@ main{
     min-height: 93px;
     position: relative;
     cursor: move;
+    width: 200px;
 }
 .mod-wrap.grabbed{
     opacity: 0.75;
